refactor(daemon): unify executor lifecycle